--- a/juejue-server/package.json
+++ b/juejue-server/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "egg": "^3.17.5",
+    "egg-jwt": "^3.1.7",
     "egg-mysql": "^5.0.0",
     "egg-scripts": "2",
     "egg-view-ejs": "^3.0.0"
