--- a/juejue-vite-h5/package.json
+++ b/juejue-vite-h5/package.json
@@ -18,6 +18,7 @@
     "query-string": "^7.0.0",
     "rc-form": "^2.4.12",
     "react": "17.0.0",
+    "react-captcha-code": "^1.0.7",
     "react-dom": "17.0.0",
     "react-router-dom": "^6.4.3",
     "zarm": "^2.9.16"
