--- a/v-element/package.json
+++ b/v-element/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-vue": "~10.5.0",
     "jiti": "^2.6.1",
     "npm-run-all2": "^8.0.4",
+    "postcss-nested": "^7.0.2",
     "typescript": "~5.9.0",
     "vite": "^7.1.11",
     "vite-plugin-checker": "^0.11.0",
