--- a/v-element/package.json
+++ b/v-element/package.json
@@ -28,7 +28,10 @@
     "eslint-plugin-vue": "~10.5.0",
     "jiti": "^2.6.1",
     "npm-run-all2": "^8.0.4",
+    "postcss-color-mix": "^1.1.0",
     "postcss-each": "^1.1.0",
+    "postcss-each-variables": "^0.3.0",
+    "postcss-for": "^2.1.1",
     "postcss-nested": "^7.0.2",
     "typescript": "~5.9.0",
     "vite": "^7.1.11",
