--- a/vue-interview-project/package.json
+++ b/vue-interview-project/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "element-plus": "^2.13.0",
     "vue": "^3.5.24"
   },
   "devDependencies": {
