--- a/vue-interview-project/package.json
+++ b/vue-interview-project/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
+    "mockjs": "^1.1.0",
     "rollup-plugin-visualizer": "^6.0.5",
     "vite": "^7.2.4",
     "vite-plugin-compression": "^0.5.1"
