--- a/daily-practice/2026/webpack-study/package.json
+++ b/daily-practice/2026/webpack-study/package.json
@@ -12,9 +12,12 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@vue/compiler-sfc": "^3.5.27",
     "css-loader": "^7.1.3",
     "html-webpack-plugin": "^5.6.6",
     "style-loader": "^4.0.0",
+    "vue": "^3.5.27",
+    "vue-loader": "^17.4.2",
     "webpack": "^5.104.1",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.3"
