--- a/daily-practice/2026/vue-ts-app/package.json
+++ b/daily-practice/2026/vue-ts-app/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.2",
+    "axios": "^1.13.4",
     "element-plus": "^2.13.2",
     "pinia": "^3.0.4",
     "vue": "^3.5.27",
