完成登录功能及token持久化存储

--- a/daily-practice/2026/vue-ts-app/package.json
+++ b/daily-practice/2026/vue-ts-app/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.13.4",
     "element-plus": "^2.13.2",
     "pinia": "^3.0.4",
+    "pinia-plugin-persistedstate": "^4.7.1",
     "vue": "^3.5.27",
     "vue-router": "^5.0.1"
   },
