--- a/daily-practice/2026/vue-ts-app/package.json
+++ b/daily-practice/2026/vue-ts-app/package.json
@@ -17,6 +17,7 @@
     "@element-plus/icons-vue": "^2.3.2",
     "axios": "^1.13.4",
     "element-plus": "^2.13.2",
+    "lodash": "^4.17.23",
     "pinia": "^3.0.4",
     "pinia-plugin-persistedstate": "^4.7.1",
     "vue": "^3.5.27",
